Update resources links

--- a/resources.html
+++ b/resources.html
@@ -19,6 +19,9 @@ group: navigation
 <p><a href="http://powershell.org/wp/forum/">PowerShell.org Forum</a></p>
 
 <h1>Blogs</h1>
+<p><a href="https://learn-powershell.net/author/boeprox/">Learn PowerShell - Boe Prox</a></p>
+<p><a href="https://blogs.technet.microsoft.com/heyscriptingguy/">Hey Scripting Guy - Ed Wilson</a></p>
+<p><a href="http://powershell.com/cs/blogs/tips/">PowerShell.com Power Tips</a></p>
 
 <h1>Twitter Accounts</h1>
 <p><a href="https://twitter.com/jsnover">Jeffrey Snover</a></p>
@@ -31,10 +34,12 @@ group: navigation
 <p><a href="http://rypress.com/tutorials/git/index">Ry’s Git Tutorial</a></p>
 
 <h1>Pester</h1>
-
+<p><a href="http://www.powershellmagazine.com/tag/pester/">PowerShell Magazine</a></p>
+<p><a href="https://www.simple-talk.com/sysadmin/powershell/practical-powershell-unit-testing-getting-started/">Michael Sorens Pester Tutorial</a></p>
+<p><a href="https://www.youtube.com/watch?v=jvvh9cpD_LM">June Blender - TDD with Pester</a></p>
 
 <h1>Office 365</h1>
-
+<p><a href="http://powershell.office.com/">PowerShell for Office 365 - Home</a></p>
 
 <h1>Active Directory</h1>
 <p><a href="https://technet.microsoft.com/en-us/library/ee617195.aspx">Active Directory PowerShell Module</a></p>
